test/types/file/bradc/badfile3.good
badfile3.chpl:3: error: 'thisVariableDoesntExist' undeclared (first use this function)
